--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -1,34 +1,21 @@
-/* Write your CSS here */
-.dark-container {
-  background-color: #000000;
-  display: flex;
-  justify-content: space-between;
-  border-width: 2px;
-  border-style: solid;
-  box-shadow: 1px 1px 1px 1px #dcdcdc;
+.slider-container {
+  background-color: #f0f0f0;
+  padding: 40px;
 }
 
-.light-container {
-  display: flex;
-  justify-content: space-between;
-  border-width: 1px;
-  border-style: solid;
-  outline: none;
-  box-shadow: 1px 1px 1px 1px #dcdcdc;
+.logo-container {
+  width: 100px;
+  height: 400px;
+
+  margin-right: 20px;
+  text-align: center;
 }
 
-.button {
-  outline: none;
-  border-width: 0px;
-  cursor: pointer;
-  background-color: transparent;
-}
+h3 {
+  background-color: bisque;
 
-.list-container {
-  list-style-type: none;
-  display: flex;
-}
+  color: #f0f0f0;
 
-.link {
-  text-decoration: transparent;
+  margin-left: 15px;
+  height: 80px;
 }
