--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,25 +1,230 @@
-/* Write your CSS here */
-.home-dark-container {
-  background-color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 100vh;
-  align-items: center;
-}
-
 .home-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
   align-items: center;
+  width: 100%;
 }
 
-.home-dark-heading {
+.ratings-container {
+  display: flex;
+  align-items: center;
+  margin: 0px;
+}
+
+.star {
+  width: 12px;
+  color: #ffcc00;
+  margin-right: 15px;
+}
+
+.trigger-button {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: 'Roboto';
+  color: white;
+  padding: 8px 15px 8px 15px;
+  margin: 8px;
+  background-color: #7c69e9;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+}
+.popup-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 50px;
+}
+
+.banner-img {
+  width: 100%;
+}
+
+.main-container {
+  padding: 50px;
+  background-color: #f0f0f0;
+}
+
+.profile-img {
+  height: 200px;
+  width: 200px;
+
+  border-radius: 50px;
+}
+
+.heading {
+  font-size: 26px;
+  font-weight: bold;
+  font-family: 'Roboto';
+}
+
+.paragraph {
+  font-size: 16px;
+  font-weight: normal;
+  font-family: 'Roboto';
+}
+
+.profile-container {
+  display: flex;
+}
+
+.details-container {
+  margin-left: 20px;
+}
+
+.react-icons {
+  margin-left: 10px;
+  font-size: 30px;
+}
+
+.akhil {
+  text-align: center;
+}
+
+.pop-container {
+  padding: 50px;
+  background-color: #f0f0f0;
+}
+
+.heading-input {
+  margin-bottom: 10px;
+  border-width: 1px;
+  width: 70%;
+  height: 40px;
+}
+
+.radio-container {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.radio-input {
+  margin-right: 10px;
+}
+
+.submit-button {
+  background-color: blue;
+
+  border-radius: 15px;
+
+  width: 80px;
+  border-width: 0px;
+  height: 40px;
   color: #ffffff;
+  text-align: center;
 }
 
-.img {
+.react-icons2 {
+  font-size: 70px;
+  margin-left: 15px;
+}
+
+.react-icons2-container {
+  text-align: center;
+}
+
+.about-container {
+  background-color: blue;
+  color: #ffffff;
+  border-radius: 15px;
+
+  padding: 35px;
+
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.about-paragraph {
+  line-height: 30px;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.services-container {
+  background-color: #f0f0f1;
+
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.development {
+  display: flex;
+  flex-direction: row;
+}
+
+.servicep {
+  text-align: center;
+}
+
+.development-container {
+  margin-right: 25px;
+}
+
+.portfolio-img {
+  width: 600px;
+  height: 400px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.portfolio-img1 {
+  width: 600px;
+  height: 400px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.radio-player {
   width: 100px;
+  height: 400px;
+
+  margin-right: 20px;
+
+  margin-bottom: 20px;
+}
+
+.video-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.write-review-button {
+  display: flex;
+  background-color: transparent;
+  border-width: 1px;
+  height: 40px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.write-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.review-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
+  margin-right: 20px;
+}
+
+.review-container {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 25px;
+}
+
+.all-reviews-button {
+  color: blue;
+  background-color: transparent;
+  border-width: 0px;
+  outline: none;
 }
